--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
             <h2>Explore More</h2>
             <ul>
                 <li><a href="page1.html">FastAPI Basics</a></li>
-                <li><a href="page2.html">Semantic Analysis Example</a></li>
+                <li><a href="semantic/index.html">Semantic Analysis Example</a></li>
                 <li><a href="page3.html">Text Generation</a></li>
             </ul>
         </nav>
