--- a/static/semantic/index.html
+++ b/static/semantic/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>ML Models with FastAPI</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" type="text/css" href="page2.css">
+    <link rel="stylesheet" type="text/css" href="../styles.css">
+    <link rel="stylesheet" type="text/css" href="custom.css">
 </head>
 <body>
     <header>
@@ -25,6 +25,6 @@
     <footer>
         <p>© 2023 Educational Demo</p>
     </footer>
-    <script src="page2.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
