adds notes about ram

--- a/modules/gpt4all/index.html
+++ b/modules/gpt4all/index.html
@@ -11,7 +11,7 @@ Text Generation Via GPT4ALL
       <label for="input_data">Text:</label>
       <textarea id="input_data" name="input_data">Please show me the html for a website that uses an llm to write code via a web API. Write all of the code, don't use placeholders indicating where code goes.</textarea>
       <div>
-          <input type="submit" value="Submit">
+          <input type="submit" value="Submit" {{ ram_status_disabler }}>
       </div>
   </form>
   <pre id="result">sample</pre>
