--- a/modules/wizard_lm/index.html
+++ b/modules/wizard_lm/index.html
@@ -11,7 +11,7 @@ Wizard LM
       <label for="input_data">Text:</label>
       <textarea id="input_data" name="input_data">Q: Name the planets in the solar system? A: </textarea>
       <div>
-          <input type="submit" value="Submit">
+          <input type="submit" value="Submit" {{ ram_status_disabler }}>
       </div>
   </form>
   <pre id="result"></pre>
