figuring out limitations

--- a/modules/starcoder_gptq/index.html
+++ b/modules/starcoder_gptq/index.html
@@ -6,12 +6,11 @@ Star Coder GPTQ
 
 {% block content %}
 <section>
-  <h2>Submit your text to get more text.</h2>
+  <h2>Describe the function you would like to have shown to you</h2>
   <form id="jsonForm">
       <label for="input_data">Text:</label>
       <textarea id="input_data" name="input_data">
-// The below code will
-// define a javascript function that plots the line for a graph in a canvas element.
+// A javascript function that plots the line for a graph in a canvas element.
 // An example input would be "y = 2x + 3" and the output should be a graph with the equation plotted on it.
 function plot(equationForLine) {
   {{ '{{~gen' }} 'code' {{ '}}' }}
